--- a/export/184/api.yaml
+++ b/export/184/api.yaml
@@ -35062,6 +35062,8 @@ components:
       in: header
       name: Authorization
       description: Token-based authentication with required prefix "Token"
+servers:
+  url: http://localhost:8000
 externalDocs:
   description: More information about InvenTree in the official docs
   url: https://docs.inventree.org
